fix input text box on safari

--- a/css/main.css
+++ b/css/main.css
@@ -307,3 +307,9 @@ p a:hover {
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
 }
+input{
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
